...
            <objects>
                <viewController storyboardIdentifier="HomeViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="HomeViewController" customModule="FruitApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search Fruits" translatesAutoresizingMaskIntoConstraints="NO" id="MPa-l7-oIp">
                                <rect key="frame" x="0.0" y="74" width="375" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="3Ch-q3-WMw"/>
                                </connections>
                            </searchBar>
...
                                <subviews>
                                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxI-Kl-WG5">
                                        <rect key="frame" x="0.0" y="0.0" width="53.5" height="27"/>
                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="All Fruits"/>
                                        <connections>
                                            <action selector="btnCategoryClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jH4-c0-0yR"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Upt-iR-ehn">
                                        <rect key="frame" x="61.5" y="0.0" width="95.5" height="27"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Fruits By Family"/>
                                        <connections>
                                            <action selector="btnCategoryClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fuS-Nt-rnv"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R6B-bX-rgF">
                                        <rect key="frame" x="165" y="0.0" width="94.5" height="27"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Fruits By Genus"/>
                                        <connections>
                                            <action selector="btnCategoryClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Q92-Iz-1rD"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FjE-6X-2Yw">
                                        <rect key="frame" x="267.5" y="0.0" width="91.5" height="27"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="12"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Fruits By Order"/>
                                        <connections>
                                            <action selector="btnCategoryClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zJJ-u2-tuW"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
                            <constraint firstItem="MPa-l7-oIp" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gNG-Cg-bzL"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fRi-7e-hTJ" secondAttribute="trailing" constant="8" id="hfs-oU-wsd"/>
                            <constraint firstItem="Ioh-DJ-tuP" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="mLs-Pw-Mqf"/>
                            <constraint firstItem="MPa-l7-oIp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mU5-Zr-f34"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Welcome to Fruits App" id="UqQ-nV-K9O"/>
                    <connections>
                        <outlet property="btnAllFruits" destination="wxI-Kl-WG5" id="ncJ-wY-Zyz"/>
                        <outlet property="btnFruitByFamily" destination="Upt-iR-ehn" id="aDn-Gz-Tmu"/>
                        <outlet property="btnFruitByGenus" destination="R6B-bX-rgF" id="qDv-75-vG2"/>
                        <outlet property="btnFruitByOrder" destination="FjE-6X-2Yw" id="S25-e7-Jem"/>
                        <outlet property="searchBar" destination="MPa-l7-oIp" id="viY-if-Gye"/>
...
